// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.domain.admin.v30;

import "com/digitalasset/canton/protocol/v30/sequencing.proto";

service DomainService {
  rpc GetDomainParametersVersioned(GetDomainParameters.Request) returns (GetDomainParameters.Response);
}

message GetDomainParameters {
  message Request {}

  message Response {
    oneof parameters {
      com.digitalasset.canton.protocol.v30.StaticDomainParameters parameters_v1 = 2;
    }
  }
}
